<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tv_main_input"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@android:color/transparent"
        android:gravity="end|bottom"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textSize="54sp" />

    <View
        android:id="@+id/view_main_boundary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:stretchColumns="*">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/btn_plus_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus_minus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_power"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/power"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_backspace_24dp"
                android:gravity="center"
                android:paddingStart="35dp"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/div"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_multi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multi"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sub"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/result"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>